--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     with:
       number-of-agents: 3
       install-commands: |
-        yarn yarn install --frozen-lockfile
+        yarn install --frozen-lockfile
         yarn prisma:generate
       parallel-commands: |
         npx nx-cloud record -- npx nx workspace-lint
