vue sfc support

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -11,7 +11,8 @@
         "main": "apps/api/src/main.ts",
         "tsConfig": "apps/api/tsconfig.app.json",
         "assets": ["apps/api/src/assets"],
-        "generatePackageJson": true
+        "generatePackageJson": true,
+        "webpackConfig": "apps/api/webpack.config.js"
       },
       "configurations": {
         "production": {
