--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOST=localhost:3000
 NODE_ENV=development
 DATABASE_URL="file:./db/dev.db"
-NEW_RELIC_LICENSE_KEY=
+NEW_RELIC_LICENSE_KEY=16711a72f6778a478f8ee7effbf3d7c3b325NRAL
 NEW_RELIC_APP_NAME="news"
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
