--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -9,6 +9,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+    -  name: My Docker Build
+       run: docker build -t test .
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
