--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -9,10 +9,10 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    -  name: checkout
-       uses: actions/checkout@v3
-    -  name: My Docker Build
-       run: docker build -t test .
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
