--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@uptownhr/auth": ["libs/auth/src/index.ts"],
       "@uptownhr/core": ["libs/core/src/index.ts"]
     }
   },
