--- a/apps/api/tsconfig.spec.json
+++ b/apps/api/tsconfig.spec.json
@@ -5,5 +5,6 @@
     "module": "commonjs",
     "types": ["jest", "node"]
   },
+  "exclude": ["generated/**"],
   "include": ["jest.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
 }
