--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "winston": "^3.8.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.19.1",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "14.5.4",
@@ -51,6 +52,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "@vue/compiler-sfc": "^3.2.37",
     "@vue/tsconfig": "^0.1.3",
+    "@vue/vue3-jest": "28",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "husky": "^8.0.0",
