--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*", "**/generated/**"],
+  "ignorePatterns": ["!**/*", "src/prisma/prisma-client"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
