--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@uptownhr/core": ["libs/core/src/index.ts"]
+      "@uptownhr/core": ["libs/core/src/index.ts"],
+      "@uptownhr/prisma": ["libs/prisma/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
