--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@uptownhr/auth": ["libs/auth/src/index.ts"],
-      "@uptownhr/core": ["libs/core/src/index.ts"]
+      "@uptownhr/core": ["libs/core/src/index.ts"],
+      "@uptownhr/prisma": ["libs/prisma/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
