--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,4 @@ jobs:
       number-of-agents: 3
       install-commands: |
         yarn install --frozen-lockfile
-        NX_CLOUD_DISTRIBUTED_EXECUTION=false yarn prisma:generate
+        NX_CLOUD_DISTRIBUTED_EXECUTION=false yarn prisma:generate prisma
