using new uptownhr/services dir

--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           script: |
             ls
-            cd services/git-magic
+            cd services/uptownhr
             git pull
             docker-compose -f docker-compose.prod.yml pull
             docker-compose -f docker-compose.prod.yml up -d
