--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
     "paths": {
       "@uptownhr/auth": ["libs/auth/src/index.ts"],
       "@uptownhr/core": ["libs/core/src/index.ts"],
+      "@uptownhr/health": ["libs/health/src/index.ts"],
       "@uptownhr/prisma": ["libs/prisma/src/index.ts"]
     }
   },
