--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -36,7 +36,7 @@ jobs:
             cd services/uptownhr
             git pull
             docker-compose -f docker-compose.prod.yml pull
-            docker-compose -f docker-compose.prod.yml up -d
+            docker-compose -f docker-compose.prod.yml --env-file prod.env up -d
           host: ${{ secrets.HOST }}
           username: ${{ secrets.username }}
           key: ${{ secrets.PRIVATE_KEY }}
